Added speaker pictures and parking to google maps.

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 <!-- About Speakers -->
 <section id="speakers" class="container content-section text-center">
     <div class="col-lg-12 col-md-12 col-sm-12">
-        <h2>Confirmed Speakers</h2>
+        <h2>Speakers</h2>
     </div>
     <div class="window row">
         <div class="col-lg-3 col-md-3 col-sm-3">
@@ -247,8 +247,7 @@
         <div class="col-lg-9 col-md-9 col-sm-9">
 
             <p>
-                <ins>Professor Sue Black</ins>
-                , Director of the Centre for Anatomy
+                <ins>Professor Sue Black</ins>, Director of the Centre for Anatomy
                 and Human Identification at the University of Dundee.
             </p>
             <input type=checkbox class=toggle id=sue>
@@ -301,9 +300,8 @@
         </div>
         <div class="col-lg-9 col-md-9 col-sm-9">
             <p class="">
-                <ins>Professor Matthias Klaes</ins>
-                ,
-                Dean of the School of Business at the University of Dundee.
+                <ins>Professor Matthias Klaes</ins>, Dean of the School of
+                Business at the University of Dundee.
             </p>
             <input type=checkbox class=toggle id=mathias>
             <label for=mathias></label>
@@ -319,8 +317,7 @@
         </div>
         <div class="col-lg-9 col-md-9 col-sm-9">
             <p>
-                <ins>Professor Tim Newman</ins>
-                , Professor of Biophysics and Dean of
+                <ins>Professor Tim Newman</ins>, Professor of Biophysics and Dean of
                 Engineering, Physics and Mathematics at the University of
                 Dundee.
             </p>
@@ -378,8 +375,7 @@
         </div>
         <div class="col-lg-9 col-md-9 col-sm-9">
             <p>
-                <ins>Professor Emanuele Trucco</ins>
-                , NRP Chair of Computational Vision and VAMPIRE project
+                <ins>Professor Emanuele Trucco</ins>, NRP Chair of Computational Vision and VAMPIRE project
                 director.
             </p>
             <input type=checkbox class=toggle id=emanuele>
@@ -465,13 +461,12 @@
         </div>
         <div class="col-md-9">
             <p>
-                <ins>Josie Booth</ins>
-                , Deputy Director of MSc Programmes, Lecturer.
+                <ins>Dr Josie Booth</ins>, Deputy Director of MSc Programmes, Lecturer at the University of Dundee.
             </p>
             <input type=checkbox class=toggle id=josie>
             <label for=josie></label>
 
-            <div><p>Dr Josie Booth is a Chartered Psychologist and Lecturer in
+            <div><p>Josie Booth is a Chartered Psychologist and Lecturer in
                 the School of Psychology at the University of Dundee. Josie was
                 awarded her PhD in Psychology from the University of Strathclyde
                 and following this, was employed as a postdoctoral researcher
@@ -538,14 +533,12 @@
         </div>
         <div class="col-md-9">
             <p>
-                <ins>Lorna Gibson</ins>
-                ,
-                Dr Lorna Gibson, Scotland Coordinator for Code Club.
+                <ins>Dr Lorna Gibson</ins>, Scotland Coordinator for Code Club.
             </p>
             <input type=checkbox class=toggle id=lorna>
             <label for=lorna></label>
 
-            <div><p>Dr Lorna Gibson is Scotland Coordinator for Code Club (a
+            <div><p>Lorna Gibson is Scotland Coordinator for Code Club (a
                 non-profit which supports schools and other venues to run coding
                 clubs). With a background in human-computer interaction,
                 accessibility and child-centred design, she knows first-hand the
@@ -588,9 +581,7 @@
         </div>
         <div class="col-md-9">
             <p>
-                <ins>Fabio Sani</ins>
-                ,
-                Professor of Social and Health Psychology in the School of
+                <ins>Professor Fabio Sani</ins>, Professor of Social and Health Psychology in the School of
                 Psychology at the University of Dundee.
 
             </p>
@@ -625,10 +616,8 @@
 
                 <h3>Presentation details</h3>
 
-
                 <p>
-                    <ins>How group living will protect you from depression</ins>
-                    :
+                    <ins>How group living will protect you from depression</ins>:
 
                     the burden of depression in the world today is very high.
                     For example, specifically concerning the UK, it is estimated
@@ -645,7 +634,6 @@
                     identification with a greater number of social groups is
                     associated with lower odds to become depressed.
                 </p>
-
 
                 <h4>How would you like to make a difference ?</h4>
 
@@ -674,9 +662,7 @@
         </div>
         <div class="col-md-9">
             <p>
-                <ins>Aliraza Somji</ins>
-                ,
-                student.
+                <ins>Aliraza Somji</ins>, student at the University of Dundee.
 
             </p>
             <input type=checkbox class=toggle id=aliraza>
@@ -708,10 +694,7 @@
                 Tanzania, a project where him and a few friends aim to better
                 the lives of the needy and homeless in his hometown Dar es
                 Salaam.
-
             </p>
-
-
                 <h4>How would you like to make a difference ?</h4>
 
                 <blockquote><p> By ensuring we don’t take for granted the
@@ -729,8 +712,8 @@
         </div>
         <div class="col-md-9">
             <p>
-                <ins>Sean Talamas</ins>
-                , PhD Student.
+                <ins>Sean Talamas</ins>, PhD Student at the University of St.
+                Andrews.
 
             </p>
             <input type=checkbox class=toggle id=sean>
@@ -769,11 +752,8 @@
             </p>
 
                 <h3>Presentation details</h3>
-
-
                 <p>
-                    <ins>Blinded by Beauty</ins>
-                    :
+                    <ins>Blinded by Beauty</ins>:
                     The attractiveness halo involves desired personality traits
                     being ascribed to attractive people over unattractive
                     people. One particularly important desired personality trait
@@ -816,7 +796,9 @@
         </div>
         <div class="col-md-9">
             <p>
-                <ins>Caroline Parkinson</ins>, Consultant.
+                <ins>Caroline Parkinson</ins>, Consultant in the creative industries and skills,
+                and a professional photographer.
+
             </p>
             <input type=checkbox class=toggle id=caroline>
             <label for=caroline></label>
@@ -849,7 +831,9 @@
                 <p>
                     <ins>Design is the Difference</ins>
                 </p>
+
                 <h4>How would you like to make a difference ?</h4>
+
                 <blockquote><p>I would like the audience to grasp, maybe
                     more than they have before, the importance of design, the
                     contribution that designers make across our society and in
@@ -1084,9 +1068,15 @@
                 Old Hawkhill, Dundee City DD1 5EN<br>
             </address>
             <p>You can find travel directions on the
-            <a href="http://www.dundee.ac.uk/">University's website</a>.
-            University of Dundee car park is free during weekends.</p>
+            <a href="http://www.dundee.ac.uk/travel/mapsanddirections/">University's website</a>.
+            University of Dundee car park is free during weekend and the closest car parks are highlighted below.
+                For more information on parking go
+                <a href="http://www.dundee.ac.uk/travel/parkinginformation/">here</a>. Information on travelling to Dundee
+            by various means of transport can be found
+                <a href="http://www.dundee.ac.uk/travel/travellingtotheuniversity/">here</a>.
+             </p>
         </div>
+
         <div class="col-lg-1 col-md-1 col-sm-1"></div>
     </div>
     <div id="GoogleMap"></div>
@@ -1302,34 +1292,64 @@
 
 <script src="http://maps.googleapis.com/maps/api/js"></script>
 <script>
-    var myCenter = new google.maps.LatLng(56.459399, -2.982406);
-    var parkCenter = new google.maps.LatLng(56.459356, -2.981526);
+
     function initialize() {
+        var myCenter = new google.maps.LatLng(56.459399, -2.982406);
         var mapProp = {
             center: myCenter,
             zoom: 17,
             scrollwheel: false,
             draggable: true,
-            mapTypeId: google.maps.MapTypeId.ROADMAP
+            mapTypeId: google.maps.MapTypeId.HYBRID
         };
         var map = new google.maps.Map(document.getElementById("GoogleMap"), mapProp);
-
         var marker = new google.maps.Marker({
             position: myCenter,
             title: 'Click to go to Google Maps.',
             url: "https://www.google.co.uk/maps/place/Dalhousie+Building/@56.459382,-2.9815976,18z/data=!4m2!3m1!1s0x0000000000000000:0x2d4e6f1d11137606",
             map: map
         });
-        var marker = new google.maps.Marker({
-            position: parkCenter,
-            title: 'Closest car park.',
-            url: "",
-            map: map,
-            fillColor: "blue"
-        });
         google.maps.event.addListener(marker, 'click', function() {
-             window.location.href = this.url;
-             });
+            window.location.href = this.url;
+        });
+
+        var parkCenter = new google.maps.LatLng(56.459542, -2.981174);
+        var markerc = new google.maps.Marker({
+            position: parkCenter,
+            title: 'Car park at University of Dundee.',
+            map: map,
+            fillColor: "blue",
+            icon: 'img/parkinglot.png'
+        });
+
+        var parkCenter = new google.maps.LatLng(56.458656, -2.981984);
+        var markerc = new google.maps.Marker({
+            position: parkCenter,
+            title: 'Car park at University of Dundee.',
+            map: map,
+            fillColor: "blue",
+            icon: 'img/parkinglot.png'
+        });
+
+        var parkCenter = new google.maps.LatLng(56.459089, -2.980284);
+        var markerc = new google.maps.Marker({
+            position: parkCenter,
+            title: 'Car park at University of Dundee.',
+            map: map,
+            fillColor: "blue",
+            icon: 'img/parkinglot.png'
+        });
+
+        var parkCenter = new google.maps.LatLng(56.458462, -2.986086);
+        var markerc = new google.maps.Marker({
+            position: parkCenter,
+            title: 'Car park at University of Dundee.',
+            map: map,
+            fillColor: "blue",
+            icon: 'img/parkinglot.png'
+        });
+
+
     }
     google.maps.event.addDomListener(window, 'load', initialize);
 </script>
