Small fix on the url to Speakers pictures.

--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
 
     <div class="window row">
         <div class="col-md-3">
-            <img src="img/Josie.png"
+            <img src="img/josie.png"
                  alt="Josie photo"
                  class='img-responsive img-rounded'>
         </div>
@@ -527,7 +527,7 @@
 
     <div class="window row">
         <div class="col-md-3">
-            <img src="img/Lorna.png"
+            <img src="img/lorna.png"
                  alt="Lorna photo"
                  class='img-responsive img-rounded'>
         </div>
@@ -706,7 +706,7 @@
     </div>
     <div class="window row">
         <div class="col-md-3">
-            <img src="img/Sean.png"
+            <img src="img/sean.png"
                  alt=" Sean photo"
                  class='img-responsive img-rounded'>
         </div>
