Minor edit on Fabio's profile.

--- a/index.html
+++ b/index.html
@@ -929,9 +929,9 @@
                     Portugal, F&aacute;bio Madeira is
                     currently studying for a PhD in the Wellcome Trust PhD
                     programme at the University of Dundee,
-                    specialising in Computational Biology. Alongside with
-                    Thiago, he helps managing and developing the website of the
-                    event.
+                    specialising in Computational Biology. Alongside with Thiago,
+                    he develops and designs the website of the event. Additionally,
+                    F&aacute;bio manages ticket sales.
                 </div>
                 <div id="darya" class="gridder-content">Darya Baranovka is the
                     president of Enterprise
