tickets sold out.

--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
         </div>
         <div class="col-lg-9 col-md-9 col-sm-9">
             <p>
-                <ins>Kirsty Miller</ins>, PhD student.
+                <ins>Kirsty Miller</ins>, PhD student at the University of Dundee.
 
             </p>
             <input type=checkbox class=toggle id=kirsty>
@@ -1003,11 +1003,7 @@
         <div class="col-lg-8 col-lg-offset-2">
             <h2>Tickets</h2>
 
-            <p>The event is open to University staff and students as well as the
-                general public. The second batch of tickets will go on sale on <ins>
-                Sunday 3rd May as from 1 pm</ins>, and a total of 50 tickets will be
-                available.
-            </p>
+            <p> Tickets are sold out! </p>
 
             <div style="width:100%; text-align:left;">
                 <iframe src="//eventbrite.co.uk/tickets-external?eid=15796774578&ref=etckt"
