--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
 
     <div class="window row">
         <div class="col-lg-3 col-md-3 col-sm-3">
-            <img src="img/kirsty.jpeg"
+            <img src="img/kirsty.png"
                  alt=" Kirsty photo"
                  class='img-responsive img-rounded'>
         </div>
